--- a/app/views/matchings/show.html.erb
+++ b/app/views/matchings/show.html.erb
@@ -1,50 +1,70 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>大会名</strong>
-  <%= @create_matching.name %>
-</p>
+<body ng-controller="guestCtl">
+  <div class="container" style="margin-top:100px; margin-left:27%; margin-right:auto;">
+    <div class="row">
+      <div class="col-md-5">
+        <div class="list-group" align="center">
+          <p class="list-group-item active" >大会詳細</p>
 
-<p>
-  <strong>主催者</strong>
-  <%= @create_matching.owner %>
-</p>
+          <table class="list-group-item">
+            <td width="320px" align="right"><strong>大会名</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td width="320px"><%= @create_matching.name %></td>
+          </table>
 
-<p>
-  <strong>作品名</strong>
-  <%= @create_matching.title %>
-</p>
+          <table class="list-group-item" >
+            <td width="320px" align="right"><strong>主催者</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <td width="320px"><%= @create_matching.owner %>
+          </table>
 
-<p>
-  <strong>参加条件</strong>
-  <%= @create_matching.reguration %>
-</p>
+          <table class="list-group-item" >
+            <td width="320px" align="right"><strong>作品名</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <td width="320px"><%= @create_matching.title %>
+          </table>
 
-<p>
-  <strong>参加締切</strong>
-  <%= @create_matching.limit %>
-</p>
+          <table class="list-group-item" >
+            <td width="320px" align="right"><strong>参加条件</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <td width="320px"><%= @create_matching.reguration %>
+          </table>
 
-<p>
-  <strong>開催日時</strong>
-  <%= @create_matching.start %>
-</p>
+          <table class="list-group-item">
+            <td width="320px" align="right"><strong>参加締切</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <% limit_time =  @create_matching.limit.strftime('%Y年%m月%d日 %H:%M')%>
+            <td width="320px"><%= limit_time %>
+          </table>
 
-<p>
-  <strong>備考</strong>
-  <%= @create_matching.memo %>
-</p>
+          <table class="list-group-item" >
+            <td width="320px" align="right"><strong>開催日時</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <% start_time = @create_matching.start.strftime('%Y年%m月%d日 %H:%M')%>
+            <td width="320px"><%= start_time %>
+          </table>
 
-<p>
-  <strong>参加者</strong> <%= @create_matching.participants.size %>名
-  <% @create_matching.participants.each do |participant| %>
-    <br>
-    <%= participant.name %>
-  <% end %>
-</p>
+          <table class="list-group-item" >
+            <td width="320px" align="right"><strong>備考</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <td width="320px"><%= @create_matching.memo %>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
 
-<% if @create_matching.limit > Time.now %>
-  <%= link_to '参加する!', new_matching_participant_path(@create_matching) %> |
-<% end %>
-<%= link_to '編集', edit_project_matching_path(@create_matching.project_id, @create_matching.id) %> |
-<%= link_to '戻る', project_matchings_path(@create_matching.project_id) %>
+  <center>
+    <% if @create_matching.limit > Time.now %>
+      <%= link_to '参加する', new_matching_participant_path(@create_matching), :class => "btn btn-success glyphicon glyphicon-plus" %>
+    <% end %>
+    <%= link_to '編集', edit_project_matching_path(@create_matching.project_id, @create_matching.id), :class => "btn btn-success glyphicon glyphicon-pencil" %>
+    <%= link_to '戻る', project_matchings_path(@create_matching.project_id), :class => "btn btn-default" %>
+  </center>
+
+  <div class="dropdown" style="margin-bottom:500px;">
+    <a href="#" class="dropdown-toggle glyphicon glyphicon-user" data-toggle="dropdown" role="button" aria-expanded="false">
+      <strong>参加者一覧</strong><span class="caret"></span>&nbsp;<span class="badge"><%= @create_matching.participants.size %>名</span>
+    </a>
+    <ul class="dropdown-menu" role="menu">
+      <% @create_matching.participants.each do |participant| %>
+        <li><%= participant.name %></li>
+        <li class="divider"></li>
+      <% end %>
+    </ul>
+  </div>
+</body>
