--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -33,10 +33,10 @@ a { text-decoration: none; }
   margin-top: 50px;
   position: fixed;
   top: 0;
-  width: 15%;
+  width: 170px;
   height: 100%;
   background: #ffffff;
-  overflow-x: auto;
+  overflow-x: scroll;
 }
 
 .back {
@@ -45,7 +45,10 @@ a { text-decoration: none; }
 }
 
 .sign_in {
-  margin-left: 150px;
+  margin-left: 230px;
+  margin-right: auto;
+  overflow-x: scroll;
+  overflow: hidden;
 }
 
 .logo {
@@ -54,7 +57,8 @@ a { text-decoration: none; }
 
 .advertize {
   margin-top: 150px;
-  margin-left: 150px;
+  margin-left: 230px;
+  margin-right: auto;
 }
 
 .home-nav {
@@ -63,7 +67,7 @@ a { text-decoration: none; }
   width: 100%;
   height: 15%;
   background: #000;
-  overflow-x: auto;
+  overflow: hidden;
 }
 
 .home-wrap {
@@ -74,7 +78,8 @@ a { text-decoration: none; }
 
 .explain {
   margin-top: 150px;
-  margin-left: 150px;
+  margin-left: 230px;
+  margin-right: auto;
 }
 
 .nav-login {
