--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,12 +7,12 @@
 
 <body background = "/../../assets/back.png" ng-controller="guestCtl">
   <center>
-    <div class="container" style="margin-top:100px; margin-left:300px;">
+    <div class="container" style="margin-top:100px; margin-left:300px; margin-right:auto;">
       <div class="row">
         <div class="col-md-8">
           <div class="panel panel-default">
             <div class="panel-heading">
-              <h2>ユーザー登録</h2>
+              <h2>バトリングに登録</h2>
             </div>
 
             <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -20,14 +20,14 @@
 
               <div class="panel-body">
                 <%= f.label :username, 'ユーザー名' %><br>
-                <%= f.text_field :username, autofocus: true %><br>
+                <%= f.text_field :username, autofocus: true, style: "width: 250px;" %><br>
 
                 <%= f.label :password, 'パスワード' %>
                 <% if @validatable %><i>(<%= @minimum_password_length %> 文字以上)</i><% end %><br>
-                <%= f.password_field :password, autocomplete: "off" %><br>
+                <%= f.password_field :password, autocomplete: "off", style: "width: 250px;"  %><br>
 
                 <%= f.label :password_confirmation, 'パスワードの確認' %><br>
-                <%= f.password_field :password_confirmation, autocomplete: "off" %><br><br><br>
+                <%= f.password_field :password_confirmation, autocomplete: "off", style: "width: 250px;"  %><br><br><br>
 
                 <div><%= button_tag( class: "btn btn-info btn-lg") do %>
                   <%= content_tag :span, "登録する" %>
