--- a/app/views/matchings/index.html.erb
+++ b/app/views/matchings/index.html.erb
@@ -1,5 +1,8 @@
-<h1><%= @project.title %> 大会一覧</h1>
-<%= link_to '大会を作成する!', new_project_matching_path(@project.id) %>
+<div class="page-header", style="display:inline;">
+<h1><%= @project.title %> 大会一覧</h1><br>
+<div align = "right"><%= link_to "大会を作成する", new_project_matching_path(@project.id), :class => "btn btn-success glyphicon glyphicon-pencil" %></div>
+</div><br><br>
+
 
 <table class="table table-striped">
   <thead>
@@ -10,7 +13,6 @@
       <th>参加締切</th>
       <th>開催日時</th>
       <th>備考</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
 
@@ -20,8 +22,10 @@
         <td><%= link_to "#{create_matching.name}", project_matching_path(create_matching.project_id, create_matching.id), data: { "no-turbolink" => true } %></td>
         <td><%= create_matching.owner %></td>
         <td><%= create_matching.reguration %></td>
-        <td><%= create_matching.limit %></td>
-        <td><%= create_matching.start %></td>
+        <% limit_time = create_matching.limit.strftime('%Y年%m月%d日 %H:%M')%>
+        <td><%= limit_time %></td>
+        <% start_time = create_matching.start.strftime('%Y年%m月%d日 %H:%M')%>
+        <td><%= start_time %></td>
         <td><%= create_matching.memo %></td>
       </tr>
     <% end %>
