--- a/app/views/matchings/_form.html.erb
+++ b/app/views/matchings/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @matching do |f| %>
   <% if @matching.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@matching.errors.count, "error") %> prohibited this matching from being saved:</h2>
+      <h2>更新できませんでした</h2>
 
       <ul>
       <% @matching.errors.full_messages.each do |message| %>
