--- a/app/views/matchings/new.html.erb
+++ b/app/views/matchings/new.html.erb
@@ -2,7 +2,7 @@
 <%= form_for [@project, @project.matchings.build] do |f| %>
   <% if @matching.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@matching.errors.count, "error") %> prohibited this matching from being saved:</h2>
+      <h2>作成できませんでした</h2>
 
       <ul>
       <% @matching.errors.full_messages.each do |message| %>
