--- a/app/views/participants/_form.html.erb
+++ b/app/views/participants/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for([@matching, @participant]) do |f| %>
   <% if @participant.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@participant.errors.count, "error") %> prohibited this participant from being saved:</h2>
+      <h2>参加できませんでした</h2>
 
       <ul>
       <% @participant.errors.full_messages.each do |message| %>
