--- a/app/views/participants/new.html.erb
+++ b/app/views/participants/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to '戻る', :back %>
+<%= link_to '戻る', project_matching_path(@matching.project.id, @matching.id) %>
