ラジオボタンにチェックがない時に試合結果を報告しないように修正 リンク先の修正

--- a/app/views/matchings/edit.html.erb
+++ b/app/views/matchings/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render "form" %>
 
-<%= link_to '大会一覧に戻る', project_matching_path(@matching.project_id, @matching.id) %> |
+<%= link_to '大会一覧に戻る', project_matchings_path(@matching.project_id) %> |
 <%= link_to '戻る', :back %>
