スクロール時のバグ修正、競合で消えたコードの修正

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,6 +28,7 @@ a { text-decoration: none; }
   /*float: right;*/
   background: #eee;
   width: 80%;
+  overflow: hidden;
 }
 .main-nav {
   margin-top: 50px;
