--- a/app/views/matchings/index.html.erb
+++ b/app/views/matchings/index.html.erb
@@ -1,5 +1,6 @@
 <h1><%= @project.title %> 大会一覧</h1>
-<%= link_to '大会を作成する!', new_project_matching_path(@project.id) %> | <%= link_to "掲示板に戻る", user_project_path(current_player.id, @project.id) %>
+<div align = "right"><%= link_to "大会を作成する", new_project_matching_path(@project.id), :class => "btn btn-success glyphicon glyphicon-pencil" %></div>
+<br><br>
 
 <table class="table table-striped">
   <thead>
@@ -10,7 +11,6 @@
       <th>参加状態</th>
       <th>開催日時</th>
       <th>備考</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
 
@@ -21,24 +21,25 @@
       <td><%= matching.owner %></td>
       <td><%= matching.reguration %></td>
       <% if matching.limit > Time.now %>
-        <td>受付中!(現在<%= matching.participants.size %>名)</td>
+        <td>受付中(現在<%= matching.participants.size %>名)</td>
       <% else %>
         <% if matching.tournament.participants.nil? %>
           <td>参加者なし</td>
         <% elsif matching.tournament.result %>
           <td>大会終了</td>
         <% elsif matching.start < Time.now %>
-          <td>開催中!(<%= matching.participants.size %>名)</td>
+          <td>開催中(<%= matching.participants.size %>名)</td>
         <% elsif matching.start > Time.now %>
           <td>受付終了(<%= matching.participants.size %>名)</td>
         <% end %>
       <% end %>
-    <td><%= matching.start %></td>
+    <% start_time = matching.start.strftime('%Y年%m月%d日 %H:%M')%>
+    <td><%= start_time %></td>
     <td><%= matching.memo %></td>
   </tr>
   <% end %>
 </tbody>
 </table>
-
-<br>
+<%= link_to "掲示板に戻る", user_project_path(current_player.id, @project.id) %>
+<br><br>
 
