レイアウトの変更　お気に入り一覧をジャンル毎に

--- a/app/assets/stylesheets/tournaments.css.scss
+++ b/app/assets/stylesheets/tournaments.css.scss
@@ -9,7 +9,7 @@
 .popup .button{
     width:150px;
     height:50px;
-    background:#4798bd;
+    background:#87cefa;
 }
 
 .popup div.tournament {
@@ -19,6 +19,6 @@
     font-size: 120%;
     padding: 5px;
     margin: 10px;
-    width: 60%;
+    width: 40%;
     display: none;
 }
