--- a/app/views/matchings/edit.html.erb
+++ b/app/views/matchings/edit.html.erb
@@ -2,5 +2,7 @@
 
 <%= render "form" %>
 
+<br>
 <%= link_to '大会一覧に戻る', project_matchings_path(@matching.project_id) %> |
-<%= link_to '戻る', :back %>
+<%= link_to '大会詳細に戻る', :back %>
+<br><br><br>
