--- a/app/views/tournaments/_tournament_graph.html.erb
+++ b/app/views/tournaments/_tournament_graph.html.erb
@@ -1,5 +1,5 @@
 <div class="popup">
-  <button class="button">トーナメント表</button>
+  <button class="button"><font color="white">トーナメント表</font></button>
   <div align=center>
     <div class="tournament">
       ~トーナメント表~
