--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div class="container-fluid">
     <div class="navbar-header">
-      <%= link_to image_tag('/../../assets/logo_black.png', :width => '110', :height => '54'), user_path(current_player.username) %>
+      <%= link_to image_tag('/../../assets/logo_clear.png', :width => '110', :height => '54'), user_path(current_player.username) %>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -24,6 +24,7 @@
         <% if @project.present? %>
           <li><p class="navbar-text"><font color="white"><%= "#{@project.title}"%>の部屋</font></p></li>
         <% end %>
+
       </ul>
 
 
@@ -33,6 +34,26 @@
             <%= link_to "大会", project_matchings_path(@project.id), :class => "glyphicon glyphicon-fire", :style => "color:white; font-size:20px;" %>
           </li>
         <% end %>
+
+         <li class="dropdown">
+          <a href="#" class="dropdown-toggle glyphicon glyphicon-star" data-toggle="dropdown" role="button" aria-expanded="false">
+            <font color="white" size="4">お気に入り一覧</font><span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li>格闘</li>
+              <% current_player.favorites.each do |favorite| %>
+                <% if favorite.genre == "格闘" %>
+                  <li><%= link_to favorite.title, user_project_path(current_player.id, favorite.project) %></li>
+                <% end %>
+              <% end %>
+              <li>FPS</li>
+              <% current_player.favorites.each do |favorite| %>
+                <% if favorite.genre == "FPS" %>
+                  <li><%= link_to favorite.title, user_project_path(current_player.id, favorite.project) %></li>
+                <% end %>
+              <% end %>
+            </ul>
+        </li>
+
         <li class="dropdown">
           <a href="#" class="dropdown-toggle glyphicon glyphicon-cog" data-toggle="dropdown" role="button" aria-expanded="false">
             <font color="white" size="4">メニュー</font><span class="caret"></span></a>
@@ -49,9 +70,9 @@
 
 
 
-<nav class="main-nav" id="main-nav">
+<!-- <nav class="main-nav" id="main-nav">
 <div align="center">
-  <!-- <header>
+  <header>
     <nav>
       <% if player_signed_in? %> 
         <strong><%= current_player.username %></strong>として<br>ログインしています。<br>
@@ -62,7 +83,7 @@
         <%= link_to "ログイン", new_player_session_path %>
       <% end %>
     </nav>
-  </header> -->
+  </header>
   <% if player_signed_in? %> 
     <ul class="nav nav-tabs nav-stacked"><br><h4>お気に入り一覧<br></h4></ul>
     <% current_player.favorites.each do |favorite| %>
@@ -71,7 +92,7 @@
     <% end %>
   <% end %>
 </div>
-</nav>
+</nav> -->
 
 <div class="page-wrap">
 <%= yield %>
